--- a/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
@@ -6,93 +6,93 @@
 
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./lib/bootstrap/dist/js/bootstrap.js"></script>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="./lib/bootstrap/dist/js/bootstrap.js"></script>
+        <style>
+            table {
+                width: 100%;
+                border-collapse: collapse;
+            }
 
-        th, td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
+            th, td {
+                padding: 8px;
+                text-align: left;
+                border-bottom: 1px solid #ddd;
+            }
 
-        th {
-            background-color: #f2f2f2;
-        }
+            th {
+                background-color: #f2f2f2;
+            }
 
-    </style>
-</head>
+        </style>
+    </head>
 
-<body>
-    <h4>@ViewData["Title"]</h4>
-    <div class="container">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-md-4 mb-3">
-                    <label for="dataConsulta" class="form-label">Inserir/ Consultar prontuário por data:</label>
-                    <input type="date" class="form-control" id="dataConsulta">
-                </div>
-                <div class="col-md-6 mb-3">
-                    <label for="nomePaciente" class="form-label">Filtrar por Paciente:</label>
-                    <input type="text" class="form-control" id="nomePaciente" placeholder="Digite o nome do paciente">
-                </div>
-                <div class="col-md-2 mb-3 align-self-end">
-                    <button class="btn btn-default btn-sm" onclick="aplicarFiltros()">Filtrar</button>
+    <body>
+        <div class="container">
+            <h4>@ViewData["Title"]</h4>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-4 mb-3">
+                        <label for="dataConsulta" class="form-label">Consultar prontuário por data:</label>
+                        <input type="date" class="form-control" id="dataConsulta">
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="nomePaciente" class="form-label">Filtrar por Paciente:</label>
+                        <input type="text" class="form-control" id="nomePaciente" placeholder="Digite o nome do paciente">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    @if (Model.Any())
-    {
-        <table>
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Nome</th>
-                    <th>Idade</th>
-                    <th>Data da internação</th>
-                    <th>Ações</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
+        @if (Model.Any())
+        {
+            <table>
+                <thead>
                     <tr>
-                        <td class="my-auto">
-                            <h3 class="mb-0 text-xs"> @item.Id</h3>
-                        </td>
-                        <td class="my-auto">
-                            <h3 class="mb-0 text-xs"> @item.Nome</h3>
-                        </td>
-                        <td class="my-auto">
-                            <h3 class="mb-0 text-xs"> @item.Idade</h3>
-                        </td>
-                        <td class="my-auto">
-                            <h3 class="mb-0 text-xs"> @item.DataInternacao</h3>
-                        </td>
-                        <td>
-                            <a data-id="@item.Id" class="btn-inserir-prontuario btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#modalInserirProntuario">Adicionar</a>
-                            <a class="btn btn-default btn-sm disabled">Detalhes</a>
-                        </td>
+                        <th>Id</th>
+                        <th>Nome</th>
+                        <th>Idade</th>
+                        <th>Data da internação</th>
+                        <th>Ações</th>
                     </tr>
-                }
-            </tbody>
-        </table>
-    }
-    else
-    {
-        <p>Não existem dados para serem exibidos nesta data</p>
-    }
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td class="my-auto">
+                                <h3 class="mb-0 text-xs"> @item.Id</h3>
+                            </td>
+                            <td class="my-auto">
+                                <h3 class="mb-0 text-xs"> @item.Nome</h3>
+                            </td>
+                            <td class="my-auto">
+                                <h3 class="mb-0 text-xs"> @item.Idade</h3>
+                            </td>
+                            <td class="my-auto">
+                                <h3 class="mb-0 text-xs"> @item.DataInternacao</h3>
+                            </td>
+                            <td>
+                                <a data-id="@item.Id" class="btn-inserir-prontuario btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#modalInserirProntuario">Adicionar</a>
+                                <a class="btn btn-default btn-sm disabled">Detalhes</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+        else
+        {
+            <p>Não existem dados para serem exibidos nesta data</p>
+        }
 
-    <div id="_AdicionarProntuarioPaciente"></div>
+        <div id="_AdicionarProntuarioPaciente"></div>
+
+    </body>
+</html>
 
     <script>
         document.querySelectorAll(".btn-inserir-prontuario").forEach(function (button) {
@@ -114,5 +114,3 @@
             });
         });
     </script>
-</body>
-</html>
