--- a/Prontuario do Paciente Online/Views/Prontuario/_AdicionarProntuarioPaciente.cshtml
+++ b/Prontuario do Paciente Online/Views/Prontuario/_AdicionarProntuarioPaciente.cshtml
@@ -17,24 +17,25 @@
             </div>
             <div class="modal-body">
                 <form asp-action="InserirProntuario" method="POST">
-                    <input type="hidden" asp-for="PacienteId" />
+                    <input type="hidden" asp-for="Paciente.Id" />
+                    <input type="hidden" asp-for="Medico.Nome" />
                     <div class="mb-3">
                         <div class="row">
                             <div class="col-md-6">
                                 <label for="nome" class="form-label">Nome:</label>
-                                <input type="text" class="form-control btn-gray-background" asp-for="PacienteNome" readonly>
+                                <input type="text" class="form-control btn-gray-background" value ="@Model.Paciente.Nome" readonly>
                             </div>
                             <div class="col-md-6">
                                 <label for="dataInternacao" class="form-label">Data de internação:</label>
-                                <input type="date" class="form-control btn-gray-background" asp-for="PacienteDataInternacao" disabled>
+                                <input type="date" class="form-control btn-gray-background" asp-for="Paciente.DataInternacao" disabled>
                             </div>
                         </div>
                     </div>
                     <div class="mb-3">
                         <div class="row">
                             <div class="col-md-6">
-                                <label class="form-control-label">Ala do paciente:</label>
-                                <input asp-for="Quarto" class="form-control">
+                                <label class="form-control-label">Ala do paciente: </label>
+                                <input asp-for="Quarto" class="form-control" required>
                                 <span asp-validation-for="Quarto" class="text-danger"></span>
                             </div>
                         </div>
@@ -43,7 +44,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <label for="medicoResponsavel" class="form-label">Médico Responsável:</label>
-                                <select class="form-select" asp-for="MedicoId" required>
+                                <select class="form-select" asp-for="Medico.Id" required>
                                     <option value="" selected>Selecione o seu cadastro</option>
                                 </select>
                             </div>
@@ -86,7 +87,7 @@
             type: "GET",
             dataType: "json",
             success: function (medicos) {
-                let dropdown = $("#MedicoId");
+                let dropdown = $("#Medico_Id");
                 dropdown.empty();
 
                 dropdown.append($('<option>', {
