Correções de alinhamento e espaçamento na tela de Pacientes, Prontuario e Tecnologia

--- a/Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
@@ -44,7 +44,9 @@
                                         <h3 class="mb-0 text-xs"> @item.DataInternacao</h3>
                                     </td>
                                     <td>
+                                       <div class="col-md-4 mt-3">
                                        <a asp-controller="pacientes" asp-action="details" asp-route-id="@item.Id" class="btn btn-default btn-sm">Detalhes</a>
+                                       </div>
                                     </td>
                                 </tr>
                             }
