--- a/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
@@ -76,8 +76,10 @@
                                 <h3 class="mb-0 text-xs"> @item.DataInternacao</h3>
                             </td>
                             <td>
+                            <div class="mt-3">
                                 <a data-id="@item.Id" class="btn-inserir-prontuario btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#modalInserirProntuario">Adicionar</a>
                                 <a class="btn btn-default btn-sm disabled">Detalhes</a>
+                            </div>
                             </td>
                         </tr>
                     }
