--- a/Prontuario do Paciente Online/Views/Prontuario/_AdicionarProntuarioPaciente.cshtml
+++ b/Prontuario do Paciente Online/Views/Prontuario/_AdicionarProntuarioPaciente.cshtml
@@ -34,7 +34,7 @@
                     <div class="mb-3">
                         <div class="row">
                             <div class="col-md-6">
-                                <label class="form-control-label">Ala do paciente: </label>
+                                <label class="form-control-label">ALA do paciente: </label>
                                 <input asp-for="Quarto" class="form-control" required>
                                 <span asp-validation-for="Quarto" class="text-danger"></span>
                             </div>
@@ -69,7 +69,7 @@
                         <textarea asp-for="AvaliacaoMedico" class="form-control" rows="4" required></textarea>
                     </div>
 
-                    <div class="modal-footer">
+                    <div class="modal-footer ">
                         <a href="@Url.Action("Index", "Prontuario")" type="button" class="btn btn-secondary">Fechar</a>
                         <button type="submit" class="btn btn-success">Adicionar</button>
                     </div>
