--- a/Prontuario do Paciente Online/Views/Tecnologia/RegistrarUsuario.cshtml
+++ b/Prontuario do Paciente Online/Views/Tecnologia/RegistrarUsuario.cshtml
@@ -64,14 +64,16 @@
                             </div>
                             <div class="row" id="campos-medico" style="display:none">
                                 <div class="form-group col-md-6">
-                                    <label asp-for="Medico.Crm" class="form-control-label"></label>
+                                    <label asp-for="Medico.Crm" class="form-control-label">CRM</label>
                                     <input asp-for="Medico.Crm" class="form-control" placeholder="Digite o CRM">
                                 </div>
                             </div>
                             <input type="hidden" asp-for="Medico.Nome" />
                             <input type="hidden" asp-for="EnumStatusAcesso" value="1">
 
-                            <button type="submit" onclick="CapturaNomeAcesso()" class="btn btn-primary mt-3">Registrar</button>
+                            <div class="mt-3">
+                                <button type="submit" onclick="CapturaNomeAcesso()" class="btn btn-primary btn-lg w-100">Registrar</button>
+                            </div>                           
                         </div>
                     </form>
                 </table>
