--- a/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
@@ -6,113 +6,147 @@
 
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="./lib/bootstrap/dist/js/bootstrap.js"></script>
-        <style>
-            table {
-                width: 100%;
-                border-collapse: collapse;
-            }
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./lib/bootstrap/dist/js/bootstrap.js"></script>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
 
-            th, td {
-                padding: 8px;
-                text-align: left;
-                border-bottom: 1px solid #ddd;
-            }
+        th, td {
+            padding: 8px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
 
-            th {
-                background-color: #f2f2f2;
-            }
+        th {
+            background-color: #f2f2f2;
+        }
 
-        </style>
-    </head>
+        #elemento-opaco {
+            opacity: 0.5;
+        }
 
-    <body>
-        <div class="container">
-            <h4>@ViewData["Title"]</h4>
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-4 mb-3">
-                        <label for="dataConsulta" class="form-label">Consultar prontuário por data:</label>
-                        <input type="date" class="form-control" id="dataConsulta">
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <label for="nomePaciente" class="form-label">Filtrar por Paciente:</label>
-                        <input type="text" class="form-control" id="nomePaciente" placeholder="Digite o nome do paciente">
-                    </div>
-                </div>
+    </style>
+</head>
+
+<body>
+    <h4>@ViewData["Title"]</h4>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-2 mb-3">
+                <label for="dataConsulta" class="form-label">Consultar prontuário por data:</label>
+                <input type="date" class="form-control" id="dataConsulta">
             </div>
         </div>
-        @if (Model.Any())
-        {
-            <table>
-                <thead>
+    </div>
+    @if (Model.Any())
+    {
+        <table>
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Nome</th>
+                    <th>Idade</th>
+                    <th>Data da internação</th>
+                    <th>Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
                     <tr>
-                        <th>Id</th>
-                        <th>Nome</th>
-                        <th>Idade</th>
-                        <th>Data da internação</th>
-                        <th>Ações</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td class="my-auto">
-                                <h3 class="mb-0 text-xs"> @item.Id</h3>
-                            </td>
-                            <td class="my-auto">
-                                <h3 class="mb-0 text-xs"> @item.Nome</h3>
-                            </td>
-                            <td class="my-auto">
-                                <h3 class="mb-0 text-xs"> @item.Idade</h3>
-                            </td>
-                            <td class="my-auto">
-                                <h3 class="mb-0 text-xs"> @item.DataInternacao</h3>
-                            </td>
-                            <td>
+                        <td class="my-auto">
+                            <h3 class="mb-0 text-xs"> @item.Id</h3>
+                        </td>
+                        <td class="my-auto">
+                            <h3 class="mb-0 text-xs"> @item.Nome</h3>
+                        </td>
+                        <td class="my-auto">
+                            <h3 class="mb-0 text-xs"> @item.Idade</h3>
+                        </td>
+                        <td class="my-auto">
+                            <h3 class="mb-0 text-xs"> @item.DataInternacao</h3>
+                        </td>
+                        <td>
                             <div class="mt-3">
-                                <a data-id="@item.Id" class="btn-inserir-prontuario btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#modalInserirProntuario">Adicionar</a>
-                                <a class="btn btn-default btn-sm disabled">Detalhes</a>
+                                @if ((ViewBag.ProntuarioService.VerificaProntuarioExistenteHoje(@item.Id)))
+                                {
+                                    <a class="btn btn-default btn-sm" id="elemento-opaco" disabled>Prontuário Existente</a>
+                                    <a data-id="@item.Id" class="btn btn-Primary btn-sm btn-detalhes-prontuario" data-bs-toggle="modal" data-bs-target="#modalDetalhesInserirProntuario">Detalhes</a>
+                                }
+                                else
+                                {
+                                    <a data-id="@item.Id" class="btn btn-success btn-sm btn-inserir-prontuario" data-bs-toggle="modal" data-bs-target="#modalInserirProntuario">Adicionar</a>
+                                    <a class="btn btn-default btn-sm" id="elemento-opaco" disabled>Detalhes</a>
+                                }
                             </div>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        }
-        else
-        {
-            <p>Não existem dados para serem exibidos nesta data</p>
-        }
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <p>Não existem dados para serem exibidos nesta data</p>
+    }
 
-        <div id="_AdicionarProntuarioPaciente"></div>
+    <div id="_AdicionarProntuarioPaciente"></div>
+    <div id="_DetalhesProntuarioPaciente"></div>
 
-    </body>
+</body>
 </html>
 
-    <script>
-        document.querySelectorAll(".btn-inserir-prontuario").forEach(function (button) {
-            debugger;
-            button.addEventListener("click", function () {
-                var pacienteId = this.getAttribute("data-id");
+<script>
+    //Inicia pagina index do prontuario com valor data hoje atribuido ao campo
+    var inputDate = document.getElementById("dataConsulta");
+    var today = new Date();
+    var year = today.getFullYear();
+    var month = (today.getMonth() + 1).toString().padStart(2, '0');
+    var day = today.getDate().toString().padStart(2, '0');
+    inputDate.value = year + "-" + month + "-" + day;
 
-                $.ajax({
-                    url: "/prontuario/AdicionarProntuario?id=" + pacienteId,
-                    method: "GET",
-                    success: function (data) {
-                        $("#_AdicionarProntuarioPaciente").html(data);
-                        $("#modalInserirProntuario").modal('show');
-                    },
-                    error: function () {
-                        alert("Ocorreu um erro ao buscar os dados da consulta.");
-                    }
-                });
+    //Abre Modal do Prontuario do Paciente
+    document.querySelectorAll(".btn-inserir-prontuario").forEach(function (button) {
+        button.addEventListener("click", function () {
+            var pacienteId = this.getAttribute("data-id");
+
+            $.ajax({
+                url: "/prontuario/AdicionarProntuario?id=" + pacienteId,
+                method: "GET",
+                success: function (data) {
+                    $("#_AdicionarProntuarioPaciente").html(data);
+                    $("#modalInserirProntuario").modal('show');
+                },
+                error: function () {
+                    alert("Ocorreu um erro ao buscar os dados da consulta.");
+                }
             });
         });
-    </script>
+    });
+
+    //Abre Modal de Detalhes do Prontuario do Paciente
+    document.querySelectorAll(".btn-detalhes-prontuario").forEach(function (button) {
+        button.addEventListener("click", function () {
+            var pacienteId = this.getAttribute("data-id");
+
+            $.ajax({
+                url: "/prontuario/DetalhesProntuario?id=" + pacienteId,
+                method: "GET",
+                success: function (data) {
+                    $("#_DetalhesProntuarioPaciente").html(data);
+                    $("#modalDetalhesInserirProntuario").modal('show');
+                },
+                error: function () {
+                    alert("Ocorreu um erro ao buscar os dados da consulta.");
+                }
+            });
+        });
+    });
+</script>
