--- a/Prontuario do Paciente Online/Views/Tecnologia/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Tecnologia/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Prontuario_do_Paciente_Online.Models.CadastroAcesso>
+﻿@model List<Prontuario_do_Paciente_Online.ViewModels.CadastroAcessoListagemViewModel>
 @{
     ViewData["Title"] = "Usuários Cadastrados";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
@@ -8,8 +8,8 @@
 
 <div class="filter-container">
     <label for="filtroTipoAcesso">Filtrar por Tipo de Acesso:</label>
-    <select id="filtroTipoAcesso">
-        <option value="">Todos</option>
+    <select id="filtroTipoAcesso" onchange="filtrarPorTipoAcesso()">
+        <option value="todos">Todos</option>
         <option value="Acompanhante">Acompanhante</option>
         <option value="Admin">Admin</option>
         <option value="Tecnologia">Tecnologia</option>
@@ -17,77 +17,61 @@
     </select>
 </div>
 
-<body>
-    <div class="main-content mt-4">
-        <div class="card p-4">
-            <div class="title-text m-4">
+<div class="main-content mt-4">
+    <div class="card p-4">
+        <div class="title-text m-4">
             <h2>@ViewData["Title"]</h2>
-            </div>
-            <div class="table-responsive">
-                @if (Model.Any())
-                {
-                    <table class="table align-items-center mb-0">
-                        <thead>
+        </div>
+        <div class="table-responsive">
+            @if (Model.Any())
+            {
+                <table class="table align-items-center mb-0">
+                    <thead>
+                        <tr>
+                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Nome</th>
+                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">E-mail</th>
+                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Tipo de Acesso</th>
+                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Status Acesso</th>
+                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
                             <tr>
-                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Nome</th>
-                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">E-mail</th>
-                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Tipo de Acesso</th>
-                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Status Acesso</th>
-                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Ações</th>
+                                <td class="my-auto">
+                                    <h3 class="mb-0 text-xs">@item.NomeCompleto</h3>
+                                </td>
+                                <td class="my-auto">
+                                    <h3 class="mb-0 text-xs">@item.Email</h3>
+                                </td>
+                                <td class="my-auto">
+                                    <h3 class="mb-0 text-xs">@item.PermissaoNome</h3>
+                                </td>
+                                <td class="my-auto">
+                                    <h3 class="mb-0 text-xs">@item.EnumStatusAcesso</h3>
+                                </td>
+                                <td>
+                                    <a asp-controller="tecnologia" asp-action="Details" asp-route-id="@item.Id" class="btn btn-default btn-sm">Detalhes</a>
+                                    <a asp-controller="tecnologia" asp-action="Inativar" asp-route-id="@item.Id" class="btn btn-secondary btn-sm">Inativar</a>
+                                </td>
                             </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td class="my-auto">
-                                        <h3 class="mb-0 text-xs"> @item.NomeCompleto</h3>
-                                    </td>
-                                    <td class="my-auto">
-                                        <h3 class="mb-0 text-xs"> @item.Email</h3>
-                                    </td>
-                                    <td class="my-auto">
-                                        <h3 class="mb-0 text-xs"> @item.PermissaoNome</h3>
-                                    </td>
-                                    <td class="my-auto">
-                                        <h3 class="mb-0 text-xs"> @item.EnumStatusAcesso</h3>
-                                    </td>
-                                    <td>
-                                        <a asp-controller="tecnologia" asp-action="Details" asp-route-id="@item.Id" class="btn btn-default btn-sm ">Detalhes </a>
-                                        <a asp-controller="tecnologia" asp-action="Inativar" asp-route-id="@item.Id" class="btn btn-secondary btn-sm  ">Inativar</a>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                }
-                else
-                {
-                    <p>Não existe dados para serem exibidos</p>
-                }
-            </div>
+                        }
+                    </tbody>
+                </table>
+            }
+            else
+            {
+                <p>Não existem dados para serem exibidos</p>
+            }
         </div>
     </div>
-</body>
+</div>
 
 <script>
-    $(document).ready(function () {
-        $("#filtroTipoAcesso").change(function () {
-            var selectedTipoAcesso = $(this).val();
-            var url = "/Tecnologia/ObterPorTipoAcesso?tipoAcesso=" + selectedTipoAcesso;
-            $.get(url, function (data) {
-                var tableBody = $(".table tbody");
-                tableBody.empty();
-                if (data && data.length > 0) {
-                    $.each(data, function (index, item) {
-                        var newRow = "<tr><td>" + item.Nome + "</td><td>" + item.Valor + "</td></tr>";
-                        tableBody.append(newRow);
-                    });
-                } else {
-                    var errorRow = "<tr><td colspan='2'>Não existe dados para serem exibidos</td></tr>";
-                    tableBody.append(errorRow);
-                }
-            });
-        });
-    });
+    function filtrarPorTipoAcesso() {
+        var tipoAcessoSelecionado = $("#filtroTipoAcesso").val();
+        window.location.href = "/tecnologia/Index?tipoAcesso=" + tipoAcessoSelecionado;
+        $("#filtroTipoAcesso").val(tipoAcessoSelecionado);
+    }
 </script>
