--- a/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
@@ -1,7 +1,14 @@
 ﻿@model List<Prontuario_do_Paciente_Online.Models.Paciente>
+@inject Prontuario_do_Paciente_Online.Services.ProntuarioService _prontuarioService;
 @{
     ViewData["Title"] = "Prontuário do paciente";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+
+    DateTime data = ViewBag.DataSelecionada;
+    int ano = data.Year;
+    int mes = data.Month;
+    int dia = data.Day;
+    string dataFormatada = $"{ano:D4}-{mes:D2}-{dia:D2}";
 }
 
 <!DOCTYPE html>
@@ -10,7 +17,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
     <script src="./lib/bootstrap/dist/js/bootstrap.js"></script>
     <style>
         table {
@@ -37,65 +44,71 @@
 
 <body>
     <h4>@ViewData["Title"]</h4>
+
     <div class="card-body">
         <div class="row">
             <div class="col-md-2 mb-3">
-                <label for="dataConsulta" class="form-label">Consultar prontuário por data:</label>
-                <input type="date" class="form-control" id="dataConsulta">
+                <label for="campoData" class="form-label">Consultar prontuário por data:</label>
+                <input type="date" class="form-control" value="@dataFormatada" id="dataConsulta">
+                <button class="btn btn-primary btn-sm" onclick="filtrarPorData()">Filtrar</button>
             </div>
         </div>
     </div>
-    @if (Model.Any())
-    {
-        <table>
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Nome</th>
-                    <th>Idade</th>
-                    <th>Data da internação</th>
-                    <th>Ações</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
+
+    <div id="tabelaProntuarios">
+        @if (Model.Any())
+        {
+            <table>
+                <thead>
                     <tr>
-                        <td class="my-auto">
-                            <h3 class="mb-0 text-xs"> @item.Id</h3>
-                        </td>
-                        <td class="my-auto">
-                            <h3 class="mb-0 text-xs"> @item.Nome</h3>
-                        </td>
-                        <td class="my-auto">
-                            <h3 class="mb-0 text-xs"> @item.Idade</h3>
-                        </td>
-                        <td class="my-auto">
-                            <h3 class="mb-0 text-xs"> @item.DataInternacao</h3>
-                        </td>
-                        <td>
-                            <div class="mt-3">
-                                @if ((ViewBag.ProntuarioService.VerificaProntuarioExistenteHoje(@item.Id)))
-                                {
-                                    <a class="btn btn-default btn-sm" id="elemento-opaco" disabled>Prontuário Existente</a>
-                                    <a data-id="@item.Id" class="btn btn-Primary btn-sm btn-detalhes-prontuario" data-bs-toggle="modal" data-bs-target="#modalDetalhesInserirProntuario">Detalhes</a>
-                                }
-                                else
-                                {
-                                    <a data-id="@item.Id" class="btn btn-success btn-sm btn-inserir-prontuario" data-bs-toggle="modal" data-bs-target="#modalInserirProntuario">Adicionar</a>
-                                    <a class="btn btn-default btn-sm" id="elemento-opaco" disabled>Detalhes</a>
-                                }
-                            </div>
-                        </td>
+                        <th>Id</th>
+                        <th>Nome</th>
+                        <th>Idade</th>
+                        <th>Data da internação</th>
+                        <th>Ações</th>
                     </tr>
-                }
-            </tbody>
-        </table>
-    }
-    else
-    {
-        <p>Não existem dados para serem exibidos nesta data</p>
-    }
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td class="my-auto">
+                                <h3 class="mb-0 text-xs"> @item.Id</h3>
+                            </td>
+                            <td class="my-auto">
+                                <h3 class="mb-0 text-xs"> @item.Nome</h3>
+                            </td>
+                            <td class="my-auto">
+                                <h3 class="mb-0 text-xs"> @item.Idade</h3>
+                            </td>
+                            <td class="my-auto">
+                                <h3 class="mb-0 text-xs"> @item.DataInternacao</h3>
+                            </td>
+                            <td>
+                                <div class="mt-3">
+                                    @if ((_prontuarioService.VerificaProntuarioExistente(@item.Id, ViewBag.DataSelecionada)))
+                                    {
+                                        <a class="btn btn-default btn-sm" id="elemento-opaco" disabled>Prontuário Existente</a>
+                                        <a id="btn-detalhes" data-id="@item.Id" class="btn btn-Primary btn-sm btn-detalhes-prontuario" data-bs-toggle="modal" data-bs-target="#modalDetalhesInserirProntuario">Detalhes</a>
+                                    }
+                                    else
+                                    {
+                                        <a data-id="@item.Id" class="btn btn-success btn-sm btn-inserir-prontuario" data-bs-toggle="modal" data-bs-target="#modalInserirProntuario">Adicionar</a>
+                                        <a class="btn btn-default btn-sm" id="elemento-opaco" disabled>Detalhes</a>
+                                    }
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+        else
+        {
+            <p>Não existem dados para serem exibidos nesta data</p>
+        }
+    </div>
+    
 
     <div id="_AdicionarProntuarioPaciente"></div>
     <div id="_DetalhesProntuarioPaciente"></div>
@@ -104,15 +117,6 @@
 </html>
 
 <script>
-    //Inicia pagina index do prontuario com valor data hoje atribuido ao campo
-    var inputDate = document.getElementById("dataConsulta");
-    var today = new Date();
-    var year = today.getFullYear();
-    var month = (today.getMonth() + 1).toString().padStart(2, '0');
-    var day = today.getDate().toString().padStart(2, '0');
-    inputDate.value = year + "-" + month + "-" + day;
-
-    //Abre Modal do Prontuario do Paciente
     document.querySelectorAll(".btn-inserir-prontuario").forEach(function (button) {
         button.addEventListener("click", function () {
             var pacienteId = this.getAttribute("data-id");
@@ -135,9 +139,10 @@
     document.querySelectorAll(".btn-detalhes-prontuario").forEach(function (button) {
         button.addEventListener("click", function () {
             var pacienteId = this.getAttribute("data-id");
-
+            var data = $("#dataConsulta").val();
+            
             $.ajax({
-                url: "/prontuario/DetalhesProntuario?id=" + pacienteId,
+                url: "/prontuario/DetalhesProntuario?id=" + pacienteId + "&data=" + data,
                 method: "GET",
                 success: function (data) {
                     $("#_DetalhesProntuarioPaciente").html(data);
@@ -149,4 +154,17 @@
             });
         });
     });
+
+    function filtrarPorData() {
+        var dataConsulta = $("#dataConsulta").val();
+        var dataSelecionada = new Date(dataConsulta);
+        var dataAtual = new Date();
+
+        if (dataSelecionada > dataAtual) {
+            alert("A data selecionada não pode ser uma data futura");
+            return;
+        }
+        window.location.href = "/prontuario/index?filtroData=" + dataConsulta;
+        $("#dataConsulta").val(dataConsulta);
+    }
 </script>
