--- a/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
@@ -17,7 +17,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./lib/bootstrap/dist/js/bootstrap.js"></script>
     <style>
         table {
@@ -39,6 +40,16 @@
             opacity: 0.5;
         }
 
+        .input-date {
+            max-width: 600px;
+            max-height: 30px;
+        }
+
+        .btn-filtrar {
+            max-width: 3px;
+            max-height: 30px;
+        }
+
     </style>
 </head>
 
@@ -46,14 +57,21 @@
     <h4>@ViewData["Title"]</h4>
 
     <div class="card-body">
-        <div class="row">
-            <div class="col-md-2 mb-3">
+        <div class="row align-items-center">
+            <div class="col-md-2 mb-2">
                 <label for="campoData" class="form-label">Consultar prontuário por data:</label>
-                <input type="date" class="form-control" value="@dataFormatada" id="dataConsulta">
-                <button class="btn btn-primary btn-sm" onclick="filtrarPorData()">Filtrar</button>
+                <div class="input-group">
+                    <input type="date" class="form-control input-date" value="@dataFormatada" id="dataConsulta">
+                    <button class="btn btn-primary btn-filtrar" onclick="filtrarPorData()">
+                        <div class="d-flex justify-content-center">
+                            <i class="fas fa-search"></i>
+                        </div>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
+
 
     <div id="tabelaProntuarios">
         @if (Model.Any())
@@ -65,6 +83,7 @@
                         <th>Nome</th>
                         <th>Idade</th>
                         <th>Data da internação</th>
+                        <th>Data do prontuário</th>
                         <th>Ações</th>
                     </tr>
                 </thead>
@@ -83,6 +102,9 @@
                             </td>
                             <td class="my-auto">
                                 <h3 class="mb-0 text-xs"> @item.DataInternacao</h3>
+                            </td>
+                            <td class="my-auto">
+                                <h3 class="mb-0 text-xs"> @ViewBag.DataSelecionada"</h3>
                             </td>
                             <td>
                                 <div class="mt-3">
@@ -108,7 +130,7 @@
             <p>Não existem dados para serem exibidos nesta data</p>
         }
     </div>
-    
+
 
     <div id="_AdicionarProntuarioPaciente"></div>
     <div id="_DetalhesProntuarioPaciente"></div>
@@ -140,7 +162,7 @@
         button.addEventListener("click", function () {
             var pacienteId = this.getAttribute("data-id");
             var data = $("#dataConsulta").val();
-            
+
             $.ajax({
                 url: "/prontuario/DetalhesProntuario?id=" + pacienteId + "&data=" + data,
                 method: "GET",
