--- a/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
@@ -101,10 +101,10 @@
                                 <h3 class="mb-0 text-xs"> @item.Idade</h3>
                             </td>
                             <td class="my-auto">
-                                <h3 class="mb-0 text-xs"> @item.DataInternacao</h3>
+                                <h3 class="mb-0 text-xs"> @item.DataInternacao.Date.ToString("dd/MM/yyyy")</h3>
                             </td>
                             <td class="my-auto">
-                                <h3 class="mb-0 text-xs"> @ViewBag.DataSelecionada"</h3>
+                                <h3 class="mb-0 text-xs"> @ViewBag.DataSelecionada.Date.ToString("dd/MM/yyyy")</h3>
                             </td>
                             <td>
                                 <div class="mt-3">
